# rocket_lightning

./: .gitignore  Makefile.toml  README.md  TODO
app/: .babelrc  .eslintrc  jest.config.js  package.json  server.js  webpack.config.js  webpack.production.config.js
deploy/: config.sh  deployed_config.json  (+3 more)
lib/rc_models/: Cargo.toml
lib/rc_models/src/: candle.rs  candle_period.rs  lib.rs  trade.rs
rc_signal/: .env  Cargo.toml  Dockerfile  config.json  diesel.toml
rc_signal/migrations/2018-08-28-104420_create_candle_period/: down.sql  up.sql
rc_signal/migrations/2018-09-01-062940_create_trades/: down.sql  up.sql
rc_signal/migrations/2018-09-01-102349_create_candles/: down.sql  up.sql
rc_signal/scripts/: db_init.sh  deps.sh
rc_signal/src/: main.rs  schema.rs
rc_signal/src/analysis_range/: mod.rs  one_min.rs  period.rs
rc_signal/src/config/: mod.rs
rc_signal/src/engine/: mod.rs  moving_avg.rs  rsi.rs
rc_signal/src/feed/: bitfinex.rs  mod.rs
rc_signal/src/models/: candle.rs  candle_period.rs  mod.rs  trade.rs
rc_signal/src/test_setup/: mod.rs
rc_signal/src/timestamp/: mod.rs
rc_signal/test/assets/: rsi_test.ods
rc_signal/test/fixtures/: .~lock.rsi_test_with_computations.csv#  .~lock.rsi_test_with_computations.ods#  rsi_candles.json  rsi_test.csv  rsi_test_with_computations.csv  rsi_test_with_computations.ods  trades.csv  trades_missing_data.csv
server/: Cargo.toml  Dockerfile  Rocket.toml  config.json
server/src/: main.rs
server/src/config/: mod.rs
server/src/graphql_schema/: mod.rs
server/src/routes/: mod.rs
server/src/socket_server/: mod.rs
(+92 files in other folders)
