[package]
name = "rc_signal"
version = "0.1.0"
authors = ["mmihira <mmihira.w@gmail.com>"]

[dependencies]
csv = "1"
curl = "*"
diesel = { version = "1.3.2", features = ["postgres"] }
dotenv = "0.9.0"
config = "0.8"
chrono = "0.4.2"
log="0.4"
pretty_env_logger="0.2.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
openssl = "*"
rc_schema = { path= "./../lib/rc_schema/" }
timestamp = { path= "./../lib/timestamp/" }
analysis_range = { path= "./../lib/analysis_range/" }
rc_models = { path= "./../lib/rc_models" }
