[package]
name = "server"
version = "0.1.0"
authors = ["mmihira <mmihira.w@gmail.com>"]

[dependencies]
openssl = "*"
analysis_range = { path = "./../lib/analysis_range" }
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
log="0.4"
pretty_env_logger="0.2.4"
rc_models = { path= "./../lib/rc_models" }
diesel = { version = "1.3.2", features = ["postgres", "r2d2"] }
config = "0.8"
rocket = "*"
rocket_codegen = "*"
juniper = "0.10.0"
juniper_codegen = "0.10.0"
juniper_rocket = "0.1.3"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
