[package]
name = "rc_models"
version = "1.0.0"

[dependencies]
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
diesel = { version = "1.3.2", features = ["postgres"] }
rc_schema = { path= "./../rc_schema" }
timestamp = { path= "./../timestamp" }
analysis_range = { path = "./../analysis_range" }
juniper = "0.10.0"
juniper_codegen = "0.10.0"
